aredn-meshmap/networkpolicy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: aredn-meshmap
  namespace: aredn-meshmap
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: aredn-meshmap
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: aredn
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: aredn-meshmap
    - ipBlock:
        cidr: 172.16.0.0/16
    - ipBlock:
        cidr: 172.17.0.0/16
    - ipBlock:
        cidr: 172.18.0.0/16
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: aredn
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: aredn-meshmap
    - ipBlock:
        cidr: 107.208.0.0/12 # AS #7018
    - ipBlock:
        cidr: 10.0.0.0/8
    - ipBlock:
        cidr: 172.16.0.0/16
    - ipBlock:
        cidr: 172.17.0.0/16
    - ipBlock:
        cidr: 172.18.0.0/16
